--- a/aip.tex
+++ b/aip.tex
@@ -49,6 +49,7 @@ TO DO LIST:
       \item[$\Box$] In Section 4, we should talk about both $\nu$'s and $F$-thresholds. We could then introduce $\IP(A,\vv{u},q)$, immediately relate its value to the $\nu$'s, and relate $\val \LP(A,\vv{u})$ to the normalized limit of $\IP(A,\vv{u},q)$, just like we do later for the fractal programs $\fip_p$ and the arithmetic programs $\IP_p$.  Most of this has already been written, and it should just be moved from Section 5.
       \pedro[inline]{Started working on it.}
       \item[$\Box$] Similarly, introduce $\fip_p$ and $\IP_p$ together, and describe their connection right away.
+      \pedro[inline]{Working on it\ldots}
       \item[$\Box$] Prior to Definition 4.1, state our goal for describing $F$-thresholds and $\nu$'s.  Use this to motivate definition of monomial pair
       %%%%% Notation %%%%%
       \item[$\Box$] Uniformize $\collapse{A(X)} = \collapse{A}(X)$.
@@ -359,7 +360,7 @@ We work in a polynomial ring over a field of characteristic $p>0$, in the variab
 \section{Linear and integer programs associated with monomial pairs}
 \label{sec: LPs}
 
-\subsection{$F$-thresholds and $\nu$ invariants as values of linear programs}
+\subsection{$\nu$ invariants as values of integer programs}
 
 \pedro[inline]{
    I'm starting with the integer program, because it's easier to motivate, via $\nu$s.
@@ -385,7 +386,7 @@ In what follows, we fix a monomial pair $(A,\vv{u})$, where $A$ is a $d\times n$
    Given a positive integer $q$, the integer program $\IP(A, \vv{u}, q)$ in the domain lattice of $A$ consists of maximizing the function $\vv{k} \mapsto \norm{\vv{k}}$ subject to the constraints $\vv{k} \geq \vv{0}$ and $A \vv{k} < \vv{u}q$. 
 \end{definition}
 
-It is easy \daniel{This is true because we only look at monomial pairs.  Should we emphasize this?} to see that the feasible set of the integer program $\IP(A,\vv{u},q)$ is bounded, and consequently this program has a well-defined value.
+It is easy \daniel{This is true because we only look at monomial pairs.  Should we emphasize this?} to see that the feasible set of the integer program $\IP(A,\vv{u},q)$ is finite, and consequently this program has a well-defined value.
 In the algebraic context established above, $\val \IP(A,\vv{u},q)$ equals $\nu(\ideala,\ideald,q)$, which we shall often denote $\nu(A,\vv{u},q)$.
 
 \begin{definition}
@@ -404,7 +405,9 @@ The $F$-threshold of $\ideala$ with respect to $\ideald$ can be expressed as the
 \begin{equation}\label{eq: limit}
 \ft{\ideala}{\ideald} = \lim_{e\to\infty} \frac{\nu(\ideala,\ideald,p^e)}{p^e} = \lim_{e\to\infty} \frac{\val \IP(A,\vv{u},p^e)}{p^e}.
 \end{equation}
-In this section we show that this limit can be realized as the value of a linear program in $\RR^n$, and also has simple descriptions in terms of the Newton polyhedron of $A$.
+In the next subsection we show that this limit can be realized as the value of a linear program in the domain of $A$, and also has simple descriptions in terms of the Newton polyhedron of $A$.
+
+\subsection{$F$-thresholds as values of linear programs}
 
 \begin{definition}
    The linear program $\LP(A, \vv{u})$ in the domain of $A$ consists of maximizing the function $\vv{k} \mapsto \norm{\vv{k}}$ subject to the constraints $\vv{k} \geq \vv{0}$ and $A \vv{k} \leq \vv{u}$.
@@ -569,7 +572,6 @@ If $\Q$ is the polyhedron consisting of all $\vv{t}$ in the domain of $M$ with $
 
 Our assertion then follows from the observation that since $A$ is fixed, as $(A, \vv{u})$ varies, there are only finitely many possibilities for $\O = \mf(A, \vv{u})$.
 \end{proof}
-
 
 \subsection{Special points and denominators}
 
@@ -1134,22 +1136,34 @@ For $p \gg 0$,
 \end{corollary}
 
 \newpage
-\section{Arithmetic integer programming}
+\section{Arithmetic integer programs and fractal linear programs}
 
-\emily[inline]{Motivate this via $\mu$s.}
+\subsection{$\mu$ invariants as values of arithmetic integer programs}
 
-In this section, we consider a variant of an integer program in which we impose an additional, and {highly} nonlinear, constraint.  As this new constraint is arithmetic in nature, we call such an optimization problem an \emph{arithmetic integer program}, and we will focus exclusively on one such family of optimization problems.  We define the terms \emph{feasible, optimal}, and \emph{value} relative to an arithmetic program in the analogous way.   
+In this section, we consider a variant of an integer program in which we impose an additional and highly nonlinear constraint.
+As this new constraint is arithmetic in nature, we call such an optimization problem an \emph{arithmetic integer program}, and we will focus exclusively on one such family of optimization problems.
+
+Let $\ideala$ be a monomial ideal in a polynomial ring in the variables $x=x_1,\ldots,x_d$ over a field of positive characteristic $p$.
+Let $\vv{u}$ be a positive point in $\NN^d$, and $\ideald = \diag(\vv{u}) = \ideal{x_1^{u_1},\ldots,x_d^{u_d}}$.
+Recall that for each $q$ a power of $p$ we define the number
+\[\mu(\ideala,\ideald,q) \coloneqq \max\big\{k\in \NN : \ideala^{[k]} \not\subseteq \ideald^{[q]}\big\},\]
+used in the computation of the critical exponent of $\ideala$ with respect to $\ideald$.
+If $A \in \NN^{d\times n}$ is an exponent matrix of $\ideala$, then $\ideala^{[k]}$ is generated by monomials $x^{A\vv{k}}$, with $\vv{k}\in \NN^n$ and $\binom{k}{\vv{k}} \not\equiv 0 \bmod{p}$.
+Since the condition $\ideala^{[k]} \not\subseteq \ideald^{[q]}$ is equivalent to the existence of $\vv{k}$ as above satisfying $A\vv{k} < \vv{u}q$, finding the maximum defining $\mu(\ideala,\ideald,q)$ is equivalent to maximizing $\norm{\vv{k}}$, with $\vv{k} \in \NN^n$ subject to the linear constraint $A\vv{k} < \vv{u}q$ and the arithmetic constraint $\binom{\norm{\vv{k}}}{\vv{k}} \not\equiv 0 \bmod{p}$.
 
 In what follows, $(A, \vv{u})$ is a $d \times n$ monomial pair and $p$ is a prime integer.
-\pedro{Maybe we should also say that $q$, from here on, will always denote a power of $p$.}
+Moreover, the letter $q$, from here on, will always denote a power of $p$.
 
 \begin{definition} 
 \label{aip: D}
-If $q$ is a power of $p$, the arithmetic integer program $\IP_p(A, \vv{u}, q)$ in $\ZZ^n$ consists of maximizing $\vv{k} \mapsto \norm{\vv{k}}$ subject to the linear constraints $\vv{k} \geq \vv{0}$ and $A \vv{k} < \vv{u}q$, and the nonlinear (arithmetic) constraint that $\binom{\norm{\vv{k}}}{\vv{k}} \not \equiv 0 \bmod p$.
-
-By \Cref{thm: dickson}, the latter  is equivalent to the condition that  if \[ \vv{k} = \vv{k}_0 + \cdots + \vv{k}_l \cdot  p^l\] is the  \daniel{I removed \emph{unique terminating} since $\vv{k}$ is a lattice point.  Both $r$ and $l$ appeared as the terminating index, so I just made both $l$, since I prefer it.  We can change it back to $r$, though.} base $p$ expansion of $\vv{k}$, then $\norm{\vv{k}_e} < p$ for all $0 \leq e \leq l$.
+The \emph{arithmetic integer program} $\IP_p(A, \vv{u}, q)$ in the domain lattice of $A$ consists of maximizing $\vv{k} \mapsto \norm{\vv{k}}$ subject to the linear constraints $\vv{k} \geq \vv{0}$ and $A \vv{k} < \vv{u}q$, and the arithmetic constraint $\binom{\norm{\vv{k}}}{\vv{k}} \not \equiv 0 \bmod p$.
 \end{definition}
 
+By \Cref{thm: dickson}, the latter  is equivalent to the condition that  if \[ \vv{k} = \vv{k}_0 + \cdots + \vv{k}_l \cdot  p^l\] is the  \daniel{I removed \emph{unique terminating} since $\vv{k}$ is a lattice point.  Both $r$ and $l$ appeared as the terminating index, so I just made both $l$, since I prefer it.  We can change it back to $r$, though.} base $p$ expansion of $\vv{k}$, then $\norm{\vv{k}_e} < p$ for all $0 \leq e \leq l$.
+
+We define the terms \emph{feasible, optimal}, and \emph{value} relative to an arithmetic program in the analogous way.
+It is easy to see that the feasible set of $\IP_p(A,\vv{u},q)$ is finite, and consequently this program has a well-defined value.
+In the algebraic context given above, $\val \IP_p(A,\vv{u},q)$ equals $\mu(\ideala,\ideald,q)$, which we shall often denote $\mu(A,\vv{u},q)$.
 
 \daniel[inline]{It is possible that we don't use the image of this program anywhere.  Maybe only the image of $\ip$.}
 \pedro[inline]{
@@ -1158,6 +1172,138 @@ By \Cref{thm: dickson}, the latter  is equivalent to the condition that  if \[ \
 \begin{definition}
 The \emph{optimal image} of $\IP_p(A, \vv{u}, q)$ is the set $\im \IP_p(A, \vv{u}, q)$ of all points  $A \vv{k}$ with $\vv{k} \in \opt \IP_p(A, \vv{u}, q)$. 
 \end{definition}
+
+If $\ideala$ and $\ideald$ are as above, and $\mu = \mu(\ideala,\ideald,q) = \val \IP_p(A,\vv{u},q)$, then the optimal image of $\IP_p(A,\vv{u},q)$ characterizes the ``leftovers'' of $\ideala^{[\mu]}$ modulo $\ideald^{[q]}$:
+\begin{align*}
+  \ideala^{[\mu]} &= \ideal{x^{A\vv{k}}: \binom{\mu}{\vv{k}} \not\equiv 0 \bmod{p}}\\
+  &\equiv \ideal{x^{A\vv{k}}: \binom{\mu}{\vv{k}} \not\equiv 0 \bmod{p}\text{ and } A\vv{k} <\vv{u}q} \bmod \ideald^{[q]}\\
+  &\equiv \ideal{x^{A\vv{k}}: \vv{k}\in \opt\IP_p(A,\vv{u},q)} \bmod \ideald^{[q]}\\
+  &\equiv \ideal{x^{\vv{v}}: \vv{v} \in \im \IP_p(A,\vv{u},q)} \bmod \ideald^{[q]}.
+\end{align*}
+The critical exponent of $\ideala$ with respect to $\ideald$ is the limit
+\begin{equation*}
+\crit(\ideala,\ideald) = \lim_{e\to\infty} \frac{\mu(\ideala,\ideald,p^e)}{p^e} = \lim_{e\to\infty} \frac{\val \IP_p(A,\vv{u},p^e)}{p^e}.
+\end{equation*}
+In the next subsection we show that this limit can be realized as the value of a \emph{fractal linear program} in the domain of $A$.
+
+\subsection{Critical exponents as values of fractal linear programs}
+
+\begin{definition}
+   The \emph{Sierpi\'nski $p$-gasket} in $\RRnn^n$ is the set $\sierp_{p,n}$
+   \pedro{Should we include $n$ in the notation? E.g., $\sierp_p^n$?}
+   \emily{There might be some confusion that this is a set $\sierp_{p}$ to the $n^\text{th}$ power?  What about $\sierp_{p,n}$?}
+   \pedro{I like that, and have incorporated it.}
+   consisting of all points $\vv{t}\in \RRnn^n$ for which there exist a sequence of points $\{ \vv{t}_e \}_{e=1}^\infty$ in $\NN^n$ for which all $\norm{\vv{t}_e} < p$ and $q$, a power of $p$, such that
+ \[
+\vv{t} = q\cdot\Big(\frac{\vv{t}_1}{p} +\frac{\vv{t}_2}{p^2}+\cdots +\frac{\vv{t}_e}{p^e} + \cdots \Big).  
+ \]
+\end{definition}
+
+From the definition, we immediately see that a point in $\RRnn^n$ is in $\sierp_{p,n}$ if the unique nonterminating base $p$ expansions of its coordinates \emph{add without carrying}.
+However, this is not a complete description of $\sierp_{p,n}$.
+For instance, when $p=2$, the sum of $\frac{1}{4} = \frac{1}{2^3} + \frac{1}{2^4} + \frac{1}{2^5} + \cdots$ with itself carries at infinitely many places, yet we see that $\left(\frac{1}{4}, \frac{1}{4}\right)$ is in the Sierpi\'nski $2$-gasket in $\RRnn^2$ after writing one summand simply as $\frac{1}{4} = \frac{1}{2^2}$, \ie in its \emph{terminating} expansion.
+
+This description of the Sierpi\'nski $p$-gasket in terms of expansions is not hard to translate geometrically into its geometric description as a fractal. 
+For instance, the points of $\sierp_{2,2}$ in $[0,1]^2$ form the familiar Sierpi\'nski triangle:   
+The points $\vv{t}$ in the unit square that have \emph{no} expansion $\vv{t} = \frac{\vv{t}_1}{2} +\frac{\vv{t}_2}{2^2}+\cdots +\frac{\vv{t}_e}{2^e} + \cdots$ for which all $\vv{t}_e \in \NN^2$, and $\norm{\vv{t}_1} < 2$ are precisely the points $(x,y) \in [0,1]^2$ lying above the line $x+y=1$, so we remove the triangle given by $x+y>1$.
+At the next stage, the points with no expansion satisfying $\norm{\vv{t}_1} < 2$ and  $\norm{\vv{t}_2} < 2$ are those in the triangle given by $x, y < \frac{1}{2}$ and $x+y > \frac{1}{2}$.  
+The condition on expansions at the third place removes three triangles from the remaining set, and we can continue on analogously. 
+
+\Cref{fig: sierpinski 3-gasket} illustrates the self-similarity of the Sierpi\'nski $3$-gasket in $\RR^2$.  In general, notice that since each can be realized by removing a union of open sets from $\RR^n$, all $\sierp_{p,n}$ are closed sets.  
+\begin{figure}
+\begin{subfigure}{.49\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{Pictures/sierpinski3_a.pdf}
+  \caption{Sierpi\'nski 3-gasket in $[0,1]^2$}
+\end{subfigure}
+\begin{subfigure}{.49\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{Pictures/sierpinski3_b.pdf}  
+  \caption{Sierpi\'nski 3-gasket in $[0,9]^2$}
+\end{subfigure}
+\caption{}
+\label{fig: sierpinski 3-gasket}
+\end{figure}
+
+Remarkably, the critical exponent of a monomial pair $(A, \vv{u})$ can be computed in terms of the Sierpi\'nski $p$-gasket, providing a geometric realization of this value.
+Toward making this relation precise, consider the following optimization problem, which essentially adds the extra ``fractal'' constraint from the definition of $\sierp_{p,n}$ to 
+the linear program $\LP(A, \vv{u})$, after replacing the condition $A \vv{t} \leq \vv{u}$ with $A \vv{t} < \vv{u}$. 
+
+\begin{definition}
+Given a monomial pair $(A, \vv{u})$, the \emph{fractal linear program} $\fip_p(A,\vv{u})$ consists of maximizing $\vv{t}\mapsto \norm{\vv{t}}$, with $\vv{t}$ in the \emph{closure} of the set of all $\vv{t}\in \sierp_{p,n}$ satisfying $A\vv{t} < \vv{u}$.
+% The value of the problem, $\val \fip_p(A,\vv{u})$, is defined as the supremum of $\norm{\vv{t}}$ among all $\vv{t} \in \feas \fip_p(A, \vv{u})$.  
+\end{definition}
+
+\begin{remark}
+The points in $\vv{t}\in \sierp_{p,n}$ satisfying $A\vv{t} < \vv{u}$ are precisely those in the intersection of 
+the feasible set of the linear program $\LP(A, \vv{u})$ with the Sierpi\'nski $p$-gasket.  
+Since this intersection is a compact set, $\feas\fip_p(A,\vv{u})$ is also compact, and $\val \fip_p(A, \vv{u}) = \max\{ \norm{\vv{t}} : \vv{t} \in \feas \fip_p(A, \vv{u}) \}$, the value of $\fip_p(A, \vv{u})$,  exists and is finite.  
+%Moreover, there is exists an optimal point
+%$\vv{t} \in \feas \fip_p(A, \vv{u})$ such that $\norm{\vv{t}} = \val \fip_p(A, \vv{u})$.
+\end{remark}
+
+\begin{example} \label{ex: feas fip}
+ Consider the optimization problem $\fip_p(A, \vv{u})$, where 
+\[ A = \begin{pmatrix}
+ 3&11\\ 11&2 \\ 5&10 \\ 2&0
+ \end{pmatrix} 
+\text{ and } \vv{u} = \begin{pmatrix} 1 \\ 1 \\ 1 \\ \end{pmatrix}.
+\]
+In \Cref{fig: feas fip}, the feasible set for $\fip_p = \fip_p(A,\vv{u})$ is shown in blue, the feasible set for $\LP(A,\vv{u})$ is shown in gray, and the optimal set is highlighted in green, for small values of $p$.  
+\begin{figure}
+  \centering
+\begin{subfigure}{.49\textwidth}
+\centering
+  \includegraphics[width=.9\textwidth]{Pictures/ex4_char2.pdf}\hskip .04\textwidth
+\caption{$\opt \fip_2 = \conv\big(\big(\frac1{20},\frac3{40}\big),\big(\frac1{12},\frac1{24}\big)\big)$}  
+\end{subfigure} 
+\begin{subfigure}{.49\textwidth}
+\centering
+\includegraphics[width=.9\textwidth]{Pictures/ex4_char3.pdf}
+\caption{$\opt \fip_3 = \conv\big(\big(\frac1{36},\frac1{12}\big),\big(\frac7{81},\frac2{81}\big)\big)$}  
+\end{subfigure}
+
+\bigskip
+
+\begin{subfigure}{.49\textwidth}
+\centering
+  \includegraphics[width=.9\textwidth]{Pictures/ex4_char5.pdf}\hskip .04\textwidth
+\caption{$\opt \fip_5 = \opt \LP(A,\vv{u}) = \big\{\big(\frac2{25}, \frac3{50}\big)\big\}$}  
+\end{subfigure}  
+\begin{subfigure}{.49\textwidth}
+\centering
+  \includegraphics[width=.9\textwidth]{Pictures/ex4_char7.pdf}
+\caption{$\opt \fip_7 = \big\{\big(\frac{19}{245}, \frac3{49}\big)\big\}$}  
+\end{subfigure}  
+\caption{The feasible and optimal sets of $\fip_p = \fip_p(A, \vv{u})$ for $A$ and $\vv{u}$ described in \Cref{ex: feas fip}, for various $p$ values.}
+\label{fig: feas fip}
+\end{figure}
+\end{example}
+
+\begin{proposition}  
+Given a monomial pair $(A, \vv{u})$, we have that 
+\[\crit(A,\vv{u}) = \val\fip_p(A,\vv{u}).\]
+\end{proposition}
+
+\begin{proof}
+For each $q=p^e$,  $\frac{1}{q}\cdot\feas\IP_p(A,\vv{u}, q)$ is contained in $\feas \fip_p(A,\vv{u})$, so 
+\[
+\val\fip_p(A,\vv{u}) \ge \displaystyle \lim_{q\to \infty}\frac{\val\IP_p(A,\vv{u}, q)}{q} = \crit(A,\vv{u}).
+ \]
+On the other hand, fix $\vv{t} \in \feas \LP(A, \vv{u}) \cap \sierp_{p,n}$, fix $q \geq 1$ a power of $p$, and a sequence $\{ \vv{t}_e \}_{e=1}^\infty$ in $\NN^n$, for which all $\norm{\vv{t}_e} < p$ and 
+$\vv{t} = q \cdot \left( \frac{\vv{t}_1}{p} +\frac{\vv{t}_2}{p^2}+\cdots \right)$.  For $e \geq 1$, let 
+ $\vv{t}^\star_{p^e} = q \cdot \left( \frac{\vv{t}_1}{p} + \cdots + \frac{\vv{t}_e}{p^e}  \right)$, so that $p^e \cdot \vv{t}^\star_{p^e} \in \IP_p(A, \vv{u}, p^e)$ and $\val \IP_p(A, \vv{u}, p^e) \geq p^e \norm{\vv{t}^\star_{p^e}}$. 
+ Dividing by $p^e$ and taking limits, we find that  
+ \[
+\crit(A,\vv{u}) = \lim_{q\to \infty} \frac{\val \IP_p(A, \vv{u}, q)}{q} \geq \lim_{q \to \infty}   \norm{\vv{t}^\star_q} = \norm{\vv{t}}.
+ \]
+Finally, given $\vv{s} \in \feas \fip_p(A, \vv{u}, p)$, fix a sequence of points $\{ \vv{s}_e \}_{e=1}^\infty$ in $\feas \LP(A, \vv{u}) \cap \sierp_{p,n}$ that limit to $\vv{s}$. Since $\vv{t} \mapsto \norm{\vv{t}}$ defines a continuous function $\RR^n \to \RR$, we have that $\crit(A, \vv{u}) \geq \lim \limits_{e \to \infty} \norm{ \vv{s}_e } =  \norm{ \vv{s} }$.
+Now, since $\vv{s}$ is an arbitrary element of $\feas \fip_p(A, \vv{u}, p)$, we have that
+$\crit(A, \vv{u}) \geq \val \fip_p(A, \vv{u})$, and equality holds. 
+\end{proof}
+
+
+\subsection{Optimal sets and values of arithmetic integer programs}
 
 We seek to understand the behavior of the arithmetic program $\IP_p(A, \vv{u}, p^e)$ for all $p \gg 0$ and $e \geq 1$.
 As will soon be apparent, these programs are more subtle than their non-arithmetic analogs.
@@ -1578,127 +1724,6 @@ We now address the last assertion:  If $A$ satisfies these additional conditions
 
 
 \todo[inline]{Point out that the levels of $\widehat{\graph}(A, \vv{u})$ are eventually periodic. This will give an independent proof the rationality of critical exponents.  The way we present a formula for critical exponents may need this observation.}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newpage
-\section{Fractal linear programs}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{definition}
-   The \emph{Sierpi\'nski $p$-gasket} in $\RRnn^n$ is the set $\sierp_{p,n}$
-   \pedro{Should we include $n$ in the notation? E.g., $\sierp_p^n$?}
-   \emily{There might be some confusion that this is a set $\sierp_{p}$ to the $n^\text{th}$ power?  What about $\sierp_{p,n}$?}
-   \pedro{I like that, and have incorporated it.}
-   consisting of all points $\vv{t}\in \RRnn^n$ for which there exist a sequence of points $\{ \vv{t}_e \}_{e=1}^\infty$ in $\NN^n$ for which all $\norm{\vv{t}_e} < p$ and $q$, a power of $p$, such that
- \[
-\vv{t} = q\cdot\Big(\frac{\vv{t}_1}{p} +\frac{\vv{t}_2}{p^2}+\cdots +\frac{\vv{t}_e}{p^e} + \cdots \Big).  
- \]
-\end{definition}
-
-From the definition, we immediately see that a point in $\RRnn^n$ is in $\sierp_{p,n}$ if the unique nonterminating base $p$ expansions of its coordinates \emph{add without carrying}.
-However, this is not a complete description of $\sierp_{p,n}$.
-For instance, when $p=2$, the sum of $\frac{1}{4} = \frac{1}{2^3} + \frac{1}{2^4} + \frac{1}{2^5} + \cdots$ with itself carries at infinitely many places, yet we see that $\left(\frac{1}{4}, \frac{1}{4}\right)$ is in the Sierpi\'nski $2$-gasket in $\RRnn^2$ after writing one summand simply as $\frac{1}{4} = \frac{1}{2^2}$, \ie in its \emph{terminating} expansion.
-
-This description of the Sierpi\'nski $p$-gasket in terms of expansions is not hard to translate geometrically into its geometric description as a fractal. 
-For instance, the points of $\sierp_{2,2}$ in $[0,1]^2$ form the familiar Sierpi\'nski triangle:   
-The points $\vv{t}$ in the unit square that have \emph{no} expansion $\vv{t} = \frac{\vv{t}_1}{2} +\frac{\vv{t}_2}{2^2}+\cdots +\frac{\vv{t}_e}{2^e} + \cdots$ for which all $\vv{t}_e \in \NN^2$, and $\norm{\vv{t}_1} < 2$ are precisely the points $(x,y) \in [0,1]^2$ lying above the line $x+y=1$, so we remove the triangle given by $x+y>1$.
-At the next stage, the points with no expansion satisfying $\norm{\vv{t}_1} < 2$ and  $\norm{\vv{t}_2} < 2$ are those in the triangle given by $x, y < \frac{1}{2}$ and $x+y > \frac{1}{2}$.  
-The condition on expansions at the third place removes three triangles from the remaining set, and we can continue on analogously. 
-
-\Cref{fig: sierpinski 3-gasket} illustrates the self-similarity of the Sierpi\'nski $3$-gasket in $\RR^2$.  In general, notice that since each can be realized by removing a union of open sets from $\RR^n$, all $\sierp_{p,n}$ are closed sets.  
-\begin{figure}
-\begin{subfigure}{.49\textwidth}
-  \centering
-  \includegraphics[width=.9\linewidth]{Pictures/sierpinski3_a.pdf}
-  \caption{Sierpi\'nski 3-gasket in $[0,1]^2$}
-\end{subfigure}
-\begin{subfigure}{.49\textwidth}
-  \centering
-  \includegraphics[width=.9\linewidth]{Pictures/sierpinski3_b.pdf}  
-  \caption{Sierpi\'nski 3-gasket in $[0,9]^2$}
-\end{subfigure}
-\caption{}
-\label{fig: sierpinski 3-gasket}
-\end{figure}
-
-Remarkably, the critical exponent of a monomial pair $(A, \vv{u})$ can be computed in terms of the Sierpi\'nski $p$-gasket, providing a geometric realization of this value.
-Toward making this relation precise, consider the following optimization problem, which essentially adds the extra ``fractal'' constraint from the definition of $\sierp_{p,n}$ to 
-the linear program $\LP(A, \vv{u})$, after replacing the condition $A \vv{t} \leq \vv{u}$ with $A \vv{t} < \vv{u}$. 
-
-\begin{definition}
-Given a monomial pair $(A, \vv{u})$, the \emph{fractal linear program} $\fip_p(A,\vv{u})$ consists of maximizing $\vv{t}\mapsto \norm{\vv{t}}$, with $\vv{t}$ in the \emph{closure} of the set of all $\vv{t}\in \sierp_{p,n}$ satisfying $A\vv{t} < \vv{u}$.
-% The value of the problem, $\val \fip_p(A,\vv{u})$, is defined as the supremum of $\norm{\vv{t}}$ among all $\vv{t} \in \feas \fip_p(A, \vv{u})$.  
-\end{definition}
-
-\begin{remark}
-The points in $\vv{t}\in \sierp_{p,n}$ satisfying $A\vv{t} < \vv{u}$ are precisely those in the intersection of 
-the feasible set of the linear program $\LP(A, \vv{u})$ with the Sierpi\'nski $p$-gasket.  
-Since this intersection is a compact set, $\feas\fip_p(A,\vv{u})$ is also compact, and $\val \fip_p(A, \vv{u}) = \max\{ \norm{\vv{t}} : \vv{t} \in \feas \fip_p(A, \vv{u}) \}$, the value of $\fip_p(A, \vv{u})$,  exists and is finite.  
-%Moreover, there is exists an optimal point
-%$\vv{t} \in \feas \fip_p(A, \vv{u})$ such that $\norm{\vv{t}} = \val \fip_p(A, \vv{u})$.
-\end{remark}
-
-\begin{example} \label{ex: feas fip}
- Consider the optimization problem $\fip_p(A, \vv{u})$, where 
-\[ A = \begin{pmatrix}
- 3&11\\ 11&2 \\ 5&10 \\ 2&0
- \end{pmatrix} 
-\text{ and } \vv{u} = \begin{pmatrix} 1 \\ 1 \\ 1 \\ \end{pmatrix}.
-\]
-In \Cref{fig: feas fip}, the feasible set for $\fip_p = \fip_p(A,\vv{u})$ is shown in blue, the feasible set for $\LP(A,\vv{u})$ is shown in gray, and the optimal set is highlighted in green, for small values of $p$.  
-\begin{figure}
-  \centering
-\begin{subfigure}{.49\textwidth}
-\centering
-  \includegraphics[width=.9\textwidth]{Pictures/ex4_char2.pdf}\hskip .04\textwidth
-\caption{$\opt \fip_2 = \conv\big(\big(\frac1{20},\frac3{40}\big),\big(\frac1{12},\frac1{24}\big)\big)$}  
-\end{subfigure} 
-\begin{subfigure}{.49\textwidth}
-\centering
-\includegraphics[width=.9\textwidth]{Pictures/ex4_char3.pdf}
-\caption{$\opt \fip_3 = \conv\big(\big(\frac1{36},\frac1{12}\big),\big(\frac7{81},\frac2{81}\big)\big)$}  
-\end{subfigure}
-
-\bigskip
-
-\begin{subfigure}{.49\textwidth}
-\centering
-  \includegraphics[width=.9\textwidth]{Pictures/ex4_char5.pdf}\hskip .04\textwidth
-\caption{$\opt \fip_5 = \opt \LP(A,\vv{u}) = \big\{\big(\frac2{25}, \frac3{50}\big)\big\}$}  
-\end{subfigure}  
-\begin{subfigure}{.49\textwidth}
-\centering
-  \includegraphics[width=.9\textwidth]{Pictures/ex4_char7.pdf}
-\caption{$\opt \fip_7 = \big\{\big(\frac{19}{245}, \frac3{49}\big)\big\}$}  
-\end{subfigure}  
-\caption{The feasible and optimal sets of $\fip_p = \fip_p(A, \vv{u})$ for $A$ and $\vv{u}$ described in \Cref{ex: feas fip}, for various $p$ values.}
-\label{fig: feas fip}
-\end{figure}
-\end{example}
-
-\begin{proposition}  
-Given a monomial pair $(A, \vv{u})$, we have that 
-\[\crit(A,\vv{u}) = \val\fip_p(A,\vv{u}).\]
-\end{proposition}
-
-\begin{proof}
-For each $q=p^e$,  $\frac{1}{q}\cdot\feas\IP_p(A,\vv{u}, q)$ is contained in $\feas \fip_p(A,\vv{u})$, so 
-\[
-\val\fip_p(A,\vv{u}) \ge \displaystyle \lim_{q\to \infty}\frac{\val\IP_p(A,\vv{u}, q)}{q} = \crit(A,\vv{u}).
- \]
-On the other hand, fix $\vv{t} \in \feas \LP(A, \vv{u}) \cap \sierp_{p,n}$, fix $q \geq 1$ a power of $p$, and a sequence $\{ \vv{t}_e \}_{e=1}^\infty$ in $\NN^n$, for which all $\norm{\vv{t}_e} < p$ and 
-$\vv{t} = q \cdot \left( \frac{\vv{t}_1}{p} +\frac{\vv{t}_2}{p^2}+\cdots \right)$.  For $e \geq 1$, let 
- $\vv{t}^\star_{p^e} = q \cdot \left( \frac{\vv{t}_1}{p} + \cdots + \frac{\vv{t}_e}{p^e}  \right)$, so that $p^e \cdot \vv{t}^\star_{p^e} \in \IP_p(A, \vv{u}, p^e)$ and $\val \IP_p(A, \vv{u}, p^e) \geq p^e \norm{\vv{t}^\star_{p^e}}$. 
- Dividing by $p^e$ and taking limits, we find that  
- \[
-\crit(A,\vv{u}) = \lim_{q\to \infty} \frac{\val \IP_p(A, \vv{u}, q)}{q} \geq \lim_{q \to \infty}   \norm{\vv{t}^\star_q} = \norm{\vv{t}}.
- \]
-Finally, given $\vv{s} \in \feas \fip_p(A, \vv{u}, p)$, fix a sequence of points $\{ \vv{s}_e \}_{e=1}^\infty$ in $\feas \LP(A, \vv{u}) \cap \sierp_{p,n}$ that limit to $\vv{s}$. Since $\vv{t} \mapsto \norm{\vv{t}}$ defines a continuous function $\RR^n \to \RR$, we have that $\crit(A, \vv{u}) \geq \lim \limits_{e \to \infty} \norm{ \vv{s}_e } =  \norm{ \vv{s} }$.
-Now, since $\vv{s}$ is an arbitrary element of $\feas \fip_p(A, \vv{u}, p)$, we have that
-$\crit(A, \vv{u}) \geq \val \fip_p(A, \vv{u})$, and equality holds. 
-\end{proof}
 
 \newpage
 
