--- a/aip.tex
+++ b/aip.tex
@@ -1180,8 +1180,8 @@ The \emph{optimal image} of $\IP_p(A, \vv{u}, q)$ is the set $\im \IP_p(A, \vv{u
 
 If $\ideala$ and $\ideald$ are as above, and $\mu = \mu(\ideala,\ideald,q) = \val \IP_p(A,\vv{u},q)$, then the optimal image of $\IP_p(A,\vv{u},q)$ characterizes the ``leftovers'' of $\ideala^{[\mu]}$ modulo $\ideald^{[q]}$:
 \begin{align*}
-  \ideala^{[\mu]} &= \ideal{x^{A\vv{k}}: \binom{\mu}{\vv{k}} \not\equiv 0 \bmod{p}}\\
-  &\equiv \ideal{x^{A\vv{k}}: \binom{\mu}{\vv{k}} \not\equiv 0 \bmod{p}\text{ and } A\vv{k} <\vv{u}q} \bmod \ideald^{[q]}\\
+  \ideala^{[\mu]} &= \ideal{x^{A\vv{k}}: \textstyle\binom{\mu}{\vv{k}} \not\equiv 0 \bmod{p}}\\
+  &\equiv \ideal{x^{A\vv{k}}: \textstyle\binom{\mu}{\vv{k}} \not\equiv 0 \bmod{p}\text{ and } A\vv{k} <\vv{u}q} \bmod \ideald^{[q]}\\
   &\equiv \ideal{x^{A\vv{k}}: \vv{k}\in \opt\IP_p(A,\vv{u},q)} \bmod \ideald^{[q]}\\
   &\equiv \ideal{x^{\vv{v}}: \vv{v} \in \im \IP_p(A,\vv{u},q)} \bmod \ideald^{[q]}.
 \end{align*}
