Added values to the sierpinski example

--- a/aip.tex
+++ b/aip.tex
@@ -1252,12 +1252,26 @@ Given a monomial pair $(A, \vv{u})$, the \emph{fractal linear program} $\fip_p(A
 \begin{subfigure}{.49\textwidth}
 \centering
   \includegraphics[width=.9\textwidth]{Pictures/ex4_char2.pdf}\hskip .04\textwidth
-\caption{$\opt \fip_2 = \conv\big(\big(\frac1{20},\frac3{40}\big),\big(\frac1{12},\frac1{24}\big)\big)$}  
+  \caption{
+     $
+     \begin{array}{l}
+       \opt \fip_2 = \conv\big(\big(\frac1{20},\frac3{40}\big),\big(\frac1{12},\frac1{24}\big)\big)\\[2mm]
+       \val \fip_2 = \frac18
+     \end{array}
+     $
+  }  
 \end{subfigure} 
 \begin{subfigure}{.49\textwidth}
 \centering
 \includegraphics[width=.9\textwidth]{Pictures/ex4_char3.pdf}
-\caption{$\opt \fip_3 = \conv\big(\big(\frac1{36},\frac1{12}\big),\big(\frac7{81},\frac2{81}\big)\big)$}  
+\caption{
+     $
+     \begin{array}{l}
+       \opt \fip_3 = \conv\big(\big(\frac1{36},\frac1{12}\big),\big(\frac7{81},\frac2{81}\big)\big)\\[2mm]
+       \val \fip_3 = \frac19
+     \end{array}
+     $
+}  
 \end{subfigure}
 
 \bigskip
@@ -1265,12 +1279,26 @@ Given a monomial pair $(A, \vv{u})$, the \emph{fractal linear program} $\fip_p(A
 \begin{subfigure}{.49\textwidth}
 \centering
   \includegraphics[width=.9\textwidth]{Pictures/ex4_char5.pdf}\hskip .04\textwidth
-\caption{$\opt \fip_5 = \opt \LP = \big\{\big(\frac2{25}, \frac3{50}\big)\big\}$}  
+  \caption{
+     $
+     \begin{array}{l}
+       \opt \fip_5 = \opt \LP = \big\{\big(\frac2{25}, \frac3{50}\big)\big\}\\[2mm]
+       \val \fip_5 = \frac7{50}
+     \end{array}
+     $
+  }  
 \end{subfigure}  
 \begin{subfigure}{.49\textwidth}
 \centering
   \includegraphics[width=.9\textwidth]{Pictures/ex4_char7.pdf}
-\caption{$\opt \fip_7 = \big\{\big(\frac{19}{245}, \frac3{49}\big)\big\}$}  
+  \caption{
+     $
+     \begin{array}{l}
+       \opt \fip_7 = \big\{\big(\frac{19}{245}, \frac3{49}\big)\big\}\\[2mm]
+       \val \fip_7 = \frac{34}{245}
+     \end{array}
+     $
+  }  
 \end{subfigure}  
 \caption{The feasible and optimal sets of $\fip_p = \fip_p(A, \vv{u})$ for $A$ and $\vv{u}$ described in \Cref{ex: feas fip}, for small values of $p$}
 \label{fig: feas fip}
